installed Email validator for wtforms, state drop down selectable with all states, not valid email error is there and data required stuff but still needs more validators

--- a/Pipfile
+++ b/Pipfile
@@ -24,9 +24,9 @@ mako = "==1.2.4"
 markupsafe = "==2.1.2"
 sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
-wtforms = "==3.0.1"
 importlib-metadata = "==6.9.0"
 zipp = "==3.17.0"
+wtforms = {extras = ["email"], version = "*"}
 
 [dev-packages]
 
