--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
 importlib-metadata = "==6.9.0"
 zipp = "==3.17.0"
-wtforms = {extras = ["email"], version = "*"}
+wtforms = "*"
 
 [dev-packages]
 
