added share modal

--- a/react-vite/package.json
+++ b/react-vite/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
+    "react-share": "^5.1.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "reselect": "^5.1.0"
